--- a/app/assets/sass/_login-email.scss
+++ b/app/assets/sass/_login-email.scss
@@ -2,13 +2,14 @@
   order: 2;
   background: transparent;
   border: none;
-  border-bottom: 2px solid rgba(theme-gray(), 0.2);
+  border-bottom: 2px solid $black-16;
   transition: border-color 100ms ease;
   font-size: 24px;
-  padding: 3px 0 6px; // padding: 7px 0;
+  padding: 3px 0 6px;
+
   &:focus {
     outline: none;
-    border-color: theme-blue(62%);
+    border-color: $black-54;
   }
 }
 
@@ -19,15 +20,13 @@
 .login-email__modal {
   position: absolute;
   top: -10px;
-  left: 0; right: 0;
+  left: 0;
+  right: 0;
   max-width: 500px;
   margin: 0 auto;
-  transition:
-    top 300ms ease,
-    opacity 400ms ease;
+  transition: top 300ms ease, opacity 400ms ease;
   pointer-events: none;
   opacity: 0;
-
   background: #fff;
   padding-bottom: 190px;
 
@@ -40,8 +39,7 @@
 
 .login-email__link {
   display: inline-block;
-  padding: 9px;
-  color: $light-gray-text;
+  color: $black-54;
 }
 
 // modal
@@ -55,7 +53,6 @@
 .login-email__password,
 .login-email__password-confirmation {
   margin-bottom: 30px - 5px;
-
   display: flex;
   flex-direction: column;
 }
@@ -76,9 +73,7 @@
   display: block;
   opacity: 0;
   color: hsl(204, 15%, 50%);
-  transition:
-    color 200ms ease,
-    opacity 50ms ease;
+  transition: color 200ms ease, opacity 50ms ease;
   font-size: 14px;
   font-weight: 500;
 
@@ -95,77 +90,7 @@
 
 .login-email__submit {
   @include button-large;
-  @include button-green;
+  background-color: $check-blue;
   display: block;
-  // margin: 0 auto 21px;
-  // &--login { margin: 10px auto 75px; }
   margin: 0 auto 75px;
-}
-
-.login-email__register-or-login,
-.login-email__cancel,
-.login-email__help-text {
-  color: $light-gray-text;
-  text-align: center;
-  margin: 0 0 17px;
-  width: 100%;
-  font-size: 16px;
-}
-
-.login-email__register-or-login,
-.login-email__cancel {
-  @include unbutton;
-}
-
-.login-email__register-or-login {
-  font-weight: 600;
-}
-
-//
-
-.upload-file > div {
-  width: 100% !important;
-  height: auto !important;
-  padding: 25px 2px !important;
-  border: 1px dashed #ccc !important;
-  color: #ccc !important;
-  text-align: center;
-  float: right;
-
-  &.with-file {
-    width: 80% !important;
-  }
-}
-
-.upload-file {
-  width: 100%;
-  margin: 10px 0;
-
-  br {
-    clear: both;
-  }
-}
-
-.preview {
-  position: relative;
-  display: inline-block;
-  float: left;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  height: 71px;
-  padding: 0;
-  margin: 0;
-  border: 1px solid #ccc;
-  width: 19%;
-  margin-right: 1%;
-
-  .remove-image {
-    position: absolute;
-    top: -2px;
-    right: 1px;
-    z-index: 1;
-    color: #ccc;
-    cursor: pointer;
-  }
 }
