--- a/app/views/rails_admin/main/_json_editor.html.erb
+++ b/app/views/rails_admin/main/_json_editor.html.erb
@@ -7,6 +7,7 @@
   var editor =  new JSONEditor(document.getElementById("<%= field_name %>_editor_holder"),{
     ajax: true,
     disable_collapse: true,
+    disable_array_reorder: true,
     theme: 'bootstrap2',
     show_errors: 'interaction',
     disable_properties: true,
