Password reset email copy #6584

--- a/app/views/devise_mailer/reset_password_instructions.html.erb
+++ b/app/views/devise_mailer/reset_password_instructions.html.erb
@@ -6,7 +6,7 @@
   <body>
     <p><%= I18n.t('devise.mailer.reset_password_instructions.greeting', :recipient => @resource.email) %></p>
 
-    <p><%= I18n.t('devise.mailer.reset_password_instructions.instruction') %></p>
+    <p><%= I18n.t('devise.mailer.reset_password_instructions.instruction', :expire => @resource.reset_password_within.to_i / 3600 %></p>
 
     <p><%= link_to I18n.t('devise.mailer.reset_password_instructions.action'), CONFIG['checkdesk_client'] + '/check/user/password-change?reset_password_token=' + @token %></p>
 
