Ticket #6567: Remove 'delete tasks' from menu and teams list
- Add permission for "delete tasks" to team owners
- Add strings to delete tasks actions

--- a/app/assets/stylesheets/rails_admin/custom/theming.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.scss
@@ -460,6 +460,23 @@ h4 {
   }
 }
 
+// Hide Delete tasks from teams list, menu and default button
+
+#list .team_row,
+ul.nav-tabs {
+  li.delete_tasks_member_link {
+    display: none;
+  }
+}
+
+#checklist_editor_holder {
+  & > [data-schemapath="root"] > .well > .btn-group button {
+    &.json-editor-btn-delete {
+      display: none;
+    }
+  }
+}
+
 .dashboard {
   display: flex;
   flex-wrap: wrap;
