Ticket #6567: Fix message on delete task confirmation
Also added back the `Delete last task` button

--- a/app/assets/stylesheets/rails_admin/custom/theming.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.scss
@@ -471,7 +471,7 @@ ul.nav-tabs {
 
 #checklist_editor_holder {
   & > [data-schemapath="root"] > .well > .btn-group button {
-    &.json-editor-btn-delete {
+    &.json-editor-btn-delete:last-child:not(:first-child) {
       display: none;
     }
   }
