--- a/app/views/assignment_mailer/notify.html.erb
+++ b/app/views/assignment_mailer/notify.html.erb
@@ -5,6 +5,7 @@
   </head>
   <body>
     <p><%= I18n.t("mail_#{@event}".to_sym, @info) %></p>
+    <p><%= @media_title %></p>
     <p><%= I18n.t(:mail_see_it) %> <%= @project_media.full_url %></p>
   </body>
 </html>
