Ticket #6644: Specific limits per archiver

--- a/app/views/rails_admin/main/_limits.html.erb
+++ b/app/views/rails_admin/main/_limits.html.erb
@@ -4,7 +4,10 @@
 :max_number_of_projects: 1
 :custom_statuses: false
 :slack_integration: false
-:keep_integration: false
+:keep_archive_is: false
+:keep_screenshot: false
+:keep_video_vault: false
+:keep_archive_org: true
 :custom_tasks_list: false
 :browser_extension: false
 </pre>
