--- a/app/views/admin_mailer/send_download_link.text.erb
+++ b/app/views/admin_mailer/send_download_link.text.erb
@@ -1,1 +1,1 @@
-<%= I18n.t(:project_export_download_mail, project: @project, link: @link, days: @days, app: @app, password: @password) %>
+<%= I18n.t("project_export_download_mail_#{@type}".to_sym, project: @project, link: @link, days: @days, app: @app, password: @password) %>
