--- a/app/assets/stylesheets/rails_admin/custom/theming.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.scss
@@ -516,3 +516,5 @@ ul.nav-tabs {
 .fa-images::before, .icon-images::before {
   content: "\f03e";
 }
+
+.icon-copy              { @extend .fa-copy !optional; }
