Team limits with JSON editor #6586

--- a/app/assets/stylesheets/rails_admin/custom/theming.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.scss
@@ -353,6 +353,7 @@ h4 {
 
 #media_verification_statuses_editor_holder,
 #source_verification_statuses_editor_holder,
+#limits_editor_holder,
 #checklist_editor_holder {
   .control-group:focus {
   }
