--- a/app/views/rails_admin/main/delete_tasks.html.haml
+++ b/app/views/rails_admin/main/delete_tasks.html.haml
@@ -1,10 +1,5 @@
 %h4
-  = t("admin.actions.delete_tasks.are_you_sure_you_want_to_delete_the_tasks_from_team", model_name: @abstract_model.pretty_name.downcase)
-  &ldquo;
-  %strong>= @model_config.with(object: @object).object_label
-  \&rdquo;
-  %span>
-  = t("admin.actions.delete_tasks.all_the_following_tasks_will_be_deleted")
+  = t("admin.actions.delete_tasks.are_you_sure_you_want_to_delete_the_tasks_from_team.html", team: @model_config.with(object: @object).object_label)
 
 %ul= render partial: "tasks_list", object: @object
 = form_for(@object, url: "/admin/team/#{@object.id}/delete_tasks", html: {method: "put"}) do
