--- a/app/views/rails_admin/main/duplicate_team.html.haml
+++ b/app/views/rails_admin/main/duplicate_team.html.haml
@@ -1,16 +1,10 @@
 - if request.post?
   %h4= t("admin.actions.duplicate_team.the_team_is_being_copied")
   %p
-    = t("admin.actions.duplicate_team.url_when_ready")
-    %strong>= "#{CONFIG['checkdesk_client']}/#{@object.generate_copy_slug}"
+    = t("admin.actions.duplicate_team.url_when_ready.html", copy_url: "#{CONFIG['checkdesk_client']}/#{@object.generate_copy_slug}")
 - else
   %h4
-    = t("admin.actions.duplicate_team.are_you_sure_you_want_to_copy_team")
-    &ldquo;
-    %strong>= @model_config.with(object: @object).object_label
-    \&rdquo;
-    %span>
-    = t("admin.actions.duplicate_team.all_the_related_data_will_be_copied")
+    = t("admin.actions.duplicate_team.are_you_sure_you_want_to_copy_team.html", team: @model_config.with(object: @object).object_label)
 
   = form_for(@object, url: "/admin/team/#{@object.id}/duplicate_team", html: {method: "post"}) do
     .form-actions
