--- a/app/views/devise_mailer/invitation_instructions.html.erb
+++ b/app/views/devise_mailer/invitation_instructions.html.erb
@@ -1,13 +1,28 @@
-<p><%= t("devise.mailer.invitation_instructions.hello", email: @resource.email) %></p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+  </head>
+  <body>
+		<p><%= I18n.t(:"devise.mailer.invitation_instructions.hello", name: @resource.name) %></p>
 
-<p><%= t("devise.mailer.invitation_instructions.someone_invited_you", url: @url) %></p>
+		<p><%= I18n.t(:"devise.mailer.invitation_instructions.someone_invited_you_#{@invited_type}", name: @invited_by, team: link_to("Sawy", @url)) %></p>
 
-<p><%= link_to t("devise.mailer.invitation_instructions.accept"), accept_invitation_url(@resource, :invitation_token => @token, :team_slug => 'sawy') %></p>
+		<% if @invited_text %>
+			<p> <%= @invited_text %></p>
+		<% end %>
+		
+		<p>
+		<%= I18n.t(:"devise.mailer.invitation_instructions.accept", url: accept_invitation_url(@resource, :invitation_token => @token, :slug => 'sawy')) %>
+		</p>
 
-<p> Add Custom text here ..................</p>
+		<% if @resource.invitation_due_at %>
+		  <p><%= t("devise.mailer.invitation_instructions.accept_until", due_date: l(@resource.invitation_due_at, format: :'devise.mailer.invitation_instructions.accept_until_format')) %></p>
+		<% end %>
 
-<% if @resource.invitation_due_at %>
-  <p><%= t("devise.mailer.invitation_instructions.accept_until", due_date: l(@resource.invitation_due_at, format: :'devise.mailer.invitation_instructions.accept_until_format')) %></p>
-<% end %>
+		<p><%= t("devise.mailer.invitation_instructions.ignore") %></p>
 
-<p><%= t("devise.mailer.invitation_instructions.ignore") %></p>
+		<p><%= I18n.t(:"devise.mailer.invitation_instructions.app_team", app: CONFIG['app_name']) %></p>
+  </body>
+</html>
+
