--- a/app/views/devise_mailer/invitation_instructions.text.erb
+++ b/app/views/devise_mailer/invitation_instructions.text.erb
@@ -1,5 +1,18 @@
-<%= t("devise.mailer.invitation_instructions.hello", email: @resource.email) %>
+<%= I18n.t(:"devise.mailer.invitation_instructions.hello", name: @resource.name) %>
 
-<%= t("devise.mailer.invitation_instructions.someone_invited_you", url: @url) %>
+<p><%= I18n.t(:"devise.mailer.invitation_instructions.someone_invited_you_#{@invited_type}", name: @invited_by, team: @url) %></p>
 
-<%= strip_tags t("devise.mailer.invitation_instructions.ignore") %>
+
+<% if @invited_text %>
+	 <%= @invited_text %>
+<% end %>
+
+<%= I18n.t(:"devise.mailer.invitation_instructions.accept") %>
+
+<% if @resource.invitation_due_at %>
+  <%= t("devise.mailer.invitation_instructions.accept_until", due_date: l(@resource.invitation_due_at, format: :'devise.mailer.invitation_instructions.accept_until_format')) %>
+<% end %>
+
+<%= t("devise.mailer.invitation_instructions.ignore") %>
+
+<%= I18n.t(:"devise.mailer.invitation_instructions.app_team", app: CONFIG['app_name']) %>
