--- a/app/views/devise_mailer/invitation_instructions.html.erb
+++ b/app/views/devise_mailer/invitation_instructions.html.erb
@@ -13,11 +13,11 @@
 		<% end %>
 
 		<p>
-		<%= I18n.t(:"devise.mailer.invitation_instructions.accept", url: accept_invitation_url(@resource, :invitation_token => @token, :slug => @team.slug)) %>
+		<%= I18n.t(:"devise.mailer.invitation_instructions.accept", url: 'TODO: ACCEPT INVITATION URL') %>
 		</p>
 
-		<% if @resource.invitation_due_at %>
-		  <p><%= t("devise.mailer.invitation_instructions.accept_until", due_date: l(@resource.invitation_due_at, format: :'devise.mailer.invitation_instructions.accept_until_format')) %></p>
+		<% if @due_at %>
+		  <p><%= t("devise.mailer.invitation_instructions.accept_until", due_date: l(@due_at, format: :'devise.mailer.invitation_instructions.accept_until_format')) %></p>
 		<% end %>
 
 		<p><%= t("devise.mailer.invitation_instructions.ignore") %></p>
