--- a/app/views/devise_mailer/invitation_instructions.text.erb
+++ b/app/views/devise_mailer/invitation_instructions.text.erb
@@ -10,8 +10,8 @@
 
 <%= I18n.t(:"devise.mailer.invitation_instructions.accept") %>
 
-<% if @resource.invitation_due_at %>
-  <%= t("devise.mailer.invitation_instructions.accept_until", due_date: l(@resource.invitation_due_at, format: :'devise.mailer.invitation_instructions.accept_until_format')) %>
+<% if @due_at %>
+  <%= t("devise.mailer.invitation_instructions.accept_until", due_date: l(@due_at, format: :'devise.mailer.invitation_instructions.accept_until_format')) %>
 <% end %>
 
 <%= t("devise.mailer.invitation_instructions.ignore") %>
