Ticket #7060 - update relay.json and configure mail host

--- a/app/views/devise_mailer/invitation_instructions.html.erb
+++ b/app/views/devise_mailer/invitation_instructions.html.erb
@@ -13,7 +13,8 @@
 		<% end %>
 
 		<p>
-		<%= I18n.t(:"devise.mailer.invitation_instructions.accept", url: 'TODO: ACCEPT INVITATION URL') %>
+		<%= I18n.t(:"devise.mailer.invitation_instructions.accept", url: accept_invitation_url(@resource, :invitation_token => @token, :slug => @team.slug)) %>
+
 		</p>
 
 		<% if @due_at %>
