Ticket #7168: Turning Assignment model into polymorphic and including AssignmentConcern in Project model

--- a/app/views/assignment_mailer/notify.text.erb
+++ b/app/views/assignment_mailer/notify.text.erb
@@ -1,5 +1,5 @@
 <%= I18n.t("mail_#{@event}".to_sym, @info) %>
 
-<%= @media_title %>
+<%= @title %>
 
-<%= I18n.t(:mail_see_it) %> <%= @project_media.full_url %>
+<%= I18n.t(:mail_see_it) %> <%= @url %>
