Ticket #7168: Refactoring assignment to be polypmorphic and implementing project assignment

--- a/app/views/assignment_mailer/ready.html.erb
+++ b/app/views/assignment_mailer/ready.html.erb
@@ -4,8 +4,6 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p><%= I18n.t("mail_#{@event}".to_sym, @info) %></p>
-    <p><%= @title %></p>
-    <p><%= I18n.t(:mail_see_it) %> <%= @url %></p>
+    <p><%= I18n.t(:mail_body_assignments_ready) %></p>
   </body>
 </html>
