--- a/app/views/assignment_mailer/notify.text.erb
+++ b/app/views/assignment_mailer/notify.text.erb
@@ -2,4 +2,6 @@
 
 <%= @title %>
 
-<%= I18n.t(:mail_see_it) %> <%= @url %>
+<% unless @event =~/unassign/ %>
+  <%= I18n.t(:mail_see_it) %> <%= @url %>
+<% end %>
