--- a/app/views/assignment_mailer/ready.html.erb
+++ b/app/views/assignment_mailer/ready.html.erb
@@ -4,6 +4,6 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p><%= I18n.t(:mail_body_assignments_ready) %></p>
+    <%= simple_format I18n.t("mail_body_assignments_ready_#{@event}", { username: @username, project_title: @project_title, project_url: @project_url, assignee: @assignee, app_name: @app_name }) %>
   </body>
 </html>
