--- a/app/views/assignment_mailer/ready.text.erb
+++ b/app/views/assignment_mailer/ready.text.erb
@@ -1,1 +1,1 @@
-<%= I18n.t(:mail_body_assignments_ready) %>
+<%= I18n.t("mail_body_assignments_ready_#{@event}", { username: @username, project_title: @project_title, project_url: @project_url, assignee: @assignee, app_name: @app_name }) %>
