--- a/app/views/project_medias/oembed.html.erb
+++ b/app/views/project_medias/oembed.html.erb
@@ -36,9 +36,9 @@
       <div id="oembed__top" class="oembed__card">
         <p id="oembed__last-status" class="oembed__status-<%= @project_media.last_status.to_s.gsub('_', '-') %>"><%= @project_media.last_status_html %></p> 
         <% if @project_media.title != @project_media.text %>
-          <p id="oembed__title"><%= @project_media.title %></p>
+          <p id="oembed__title" dir="auto"><%= @project_media.title %></p>
         <% end %>
-        <div id="oembed__content" dir="auto">
+        <div id="oembed__content">
         <%
           meme = @project_media.get_dynamic_annotation('memebuster')&.memebuster_url
           picture = @project_media.media.picture
@@ -55,7 +55,7 @@
               </div>
             <% end %>
             <% unless @project_media.text.blank? %>
-              <div id="oembed__content-col-2" class="oembed__linkify">
+              <div id="oembed__content-col-2" class="oembed__linkify" dir="auto">
                 <p><%= @project_media.text %></p>
               </div>
             <% end %>
@@ -96,8 +96,8 @@
 
       <div id="oembed__footer">
         <% team = @project_media.project.team %>
-        <p><img src="<%= team.avatar %>" alt="" /> <span id="oembed__team-name"><%= team.name %></span></p>
-        <p class="oembed__linkify" id="oembed__team-disclaimer"><%= team.get_disclaimer %></p>
+        <p><img src="<%= team.avatar %>" alt="" /> <span id="oembed__team-name" dir="auto"><%= team.name %></span></p>
+        <p class="oembed__linkify" id="oembed__team-disclaimer" dir="auto"><%= team.get_disclaimer %></p>
         <p class="oembed__linkify" id="oembed__team-link"><%= team.url %></p>
       </div>
     </div> <!-- / #oembed__content-container -->
