--- a/app/views/project_medias/oembed.html.erb
+++ b/app/views/project_medias/oembed.html.erb
@@ -111,6 +111,7 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', '<%= CONFIG["google_analytics_code"] %>', 'auto');
+      ga('set', 'anonymizeIp', true); // make it GDPR-compliant
       ga('send', 'pageview');
     </script>
     <% end %>
