Fixing meme width on embed

--- a/app/views/project_medias/oembed.html.erb
+++ b/app/views/project_medias/oembed.html.erb
@@ -51,7 +51,7 @@
           <div id="oembed__content-content">
             <% unless picture.blank? %>
               <div id="oembed__content-col-1">
-                <img src="<%= picture %>" alt="" />
+                <img src="<%= picture %>" class="oembed__meme" alt="" />
               </div>
             <% end %>
             <% unless @project_media.text.blank? %>
