Tickets #7404 and #7458: Return source and target medias on the root of a relationship mutation, use a different Sidekiq queue depending on the header, fixing Code Climate issues and include custom tasks on embed

--- a/public/css/oembed.css
+++ b/public/css/oembed.css
@@ -219,6 +219,10 @@ a:visited {
   align-items: center;
 }
 
+#oembed__footer p#oembed__team-disclaimer {
+  display: block;
+}
+
 #oembed__footer img {
   width: 24px;
   height: 24px;
