Tickets #7462, #7460, #7459 and #7454: Fixes

--- a/app/views/project_medias/oembed.html.erb
+++ b/app/views/project_medias/oembed.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Language" id="oembed__meta-content-language" content="">
     <title><%= @project_media.title %></title>
-    <link href="<%= CONFIG['checkdesk_base_url'] %>/css/oembed.css" rel="stylesheet" type="text/css">
+    <link href="<%= CONFIG['checkdesk_base_url'] %>/css/oembed.css?t=201904021148" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="<%= CONFIG['checkdesk_base_url'] %>/javascripts/timeago/jquery.timeago.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-linkify/2.1.8/linkify.min.js"></script>
@@ -102,7 +102,7 @@
       </div>
     </div> <!-- / #oembed__content-container -->
 
-    <script src="<%= CONFIG['checkdesk_base_url'] %>/javascripts/oembed.js"></script>
+    <script src="<%= CONFIG['checkdesk_base_url'] %>/javascripts/oembed.js?t=201904021148"></script>
 
     <% unless CONFIG['google_analytics_code'].blank? %>
     <script>
